@@ -1,15 +1,13 @@
-package _03_Aplikation;
+package Aufgaben.aufgabe_1;
 
 import javafx.application.Application;
 import javafx.fxml.FXMLLoader;
-import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.stage.Stage;
 
 import java.io.IOException;
-import java.util.Objects;
 
-public class App extends Application
+public class MainApp extends Application
 {
     public static void main(String[] args)
     {
@@ -21,15 +19,17 @@ public class App extends Application
     public void start(Stage stage) throws IOException
     {
 
-        FXMLLoader fxmlLoader = new FXMLLoader(App.class.getResource("Main.fxml"));
+        FXMLLoader fxmlLoader = new FXMLLoader(MainApp.class.getResource("Main.fxml"));
         Scene scene = new Scene(fxmlLoader.load());
 
 //        Parent root = FXMLLoader.load(Objects.requireNonNull(getClass().getResource("Main.fxml")));
 //        Scene scene = new Scene(root);
 
-        stage.setTitle("Arithmetische Operationen");
+        stage.setTitle("Arithmetische Operationen in einer Seite");
         stage.setScene(scene);
         stage.show();
 
     }
 }
+
+// --module-path "C:\Program Files (x86)\Java\javafx-sdk-11.0.2\lib" --add-modules=javafx.controls,javafx.fxml
